<resources>
    <string name="parse_app_id">jadibgKgQBjKhvYdPhptYCM0C2mTWIYkXeYKhsuq</string>
    <string name="parse_client_key">AYj5VuAVO5eaCD2KTHR19BqJZiq0zA6xMMmAsj1d</string>
    <string name="facebook_app_id">116915712024040</string>
    <string name="app_name">Trumpeter</string>
    <string name="emailAddressString">Email Address</string>
    <string name="emailAddressOrUsernameString">Email Address or Username</string>
    <string name="passwordString">Password</string>
    <string name="passwordGreaterString">Password (6+ characters)</string>
    <string name="confirmPasswordString">Confirm Password</string>
    <string name="loginString">Log In</string>
    <string name="usernameString">Username</string>
    <string name="createAccountString">Create an Account</string>
    <string name="createYourAccountString">Create Your Account</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="createAnAccountString">Create An Account</string>
    <string name="errorFieldRequiredString">Field required.</string>
    <string name="errorInvalidEmailString">Not an email address.</string>
    <string name="errorPasswordTooShortString">Password provided is too short.</string>
    <string name="errorPasswordMismatchString">Passwords don\'t match.</string>
    <string name="whatsGoingOnString">What\'s going on?</string>
    <string name="trumpetString">Trumpet</string>
    <string name="notifications">Notifications</string>
    <string name="emptyTextViewString">No replies!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_create_account">Create an Account</string>
    <string name="title_activity_feed">Feed Activity</string>
    <string name="title_activity_submit_trumpet">Submit Trumpet Activity</string>
    <string name="title_activity_view_trumpet">View Trumpet</string>

</resources>